# mousesniff

./: README.md  package-lock.json  package.json  vite.config.ts
src/: App.css  App.tsx  MouseData.tsx  utils.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/rawinput-mouse/: Cargo.toml
src-tauri/rawinput-mouse/src/: lib.rs
src-tauri/src/: lib.rs  main.rs
