[package]
name = "rawinput-mouse"
version = "0.1.0"
edition = "2021"


[dependencies.windows]
version = "0.48.0"
features = [
    "Data_Xml_Dom",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_UI_Input",
    "Win32_Devices_HumanInterfaceDevice",
]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html